--- a/_site.yml
+++ b/_site.yml
@@ -22,3 +22,6 @@ output:
     include:
       after_body: footer.html
       css: styles.css
+header-includes:
+  - \usepackage{color}
+  - \usepackage{amsmath}
